--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,8 @@ default: &default
 development:
   <<: *default
   database: recipe_app_development
+  username: postgres
+  password: <%= ENV["recipe_app_pass"] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -56,6 +58,8 @@ development:
 test:
   <<: *default
   database: recipe_app_test
+  username: postgres
+  password: <%= ENV["recipe_app_pass"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,5 +84,5 @@ test:
 production:
   <<: *default
   database: recipe_app_production
-  username: recipe_app
-  password: <%= ENV["RECIPE_APP_DATABASE_PASSWORD"] %>
+  username: postgres
+  password: <%= ENV["recipe_app_pass"] %>
