--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ node_modules/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
